--- a/app/public/home.html
+++ b/app/public/home.html
@@ -12,10 +12,10 @@
     <div class="container">
 
         <div class="title">
-            <h1></h1>
+            <h1 class=""><i> </i> Friend Finder</h1>
             <hr>
-            <h2></h2>
-            <h2></h2>
+            <h2 class="">Answer a few basic questions. </h2>
+            <h2 class="">Then find the friend with the greatest compatibility!</h2>
             <br>
 
             <div class="button">
