--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -111,7 +111,8 @@
         </select>
 
         <h3><strong>Question 9</strong></h3>
-        <h4>You think that everyone's views should be respected regardless of whether they are supported by facts or not.</h4>
+        <h4>You think that everyone's views should be respected regardless of whether they are supported by facts or
+            not.</h4>
         <select data-placeholder="" class="chosen-select" id="q9">
             <option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
