--- a/app/public/home.html
+++ b/app/public/home.html
@@ -5,22 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!--Bootstrap CSS-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <!--Font Awesome Icons-->
+    <script src="https://kit.fontawesome.com/6117c38d24.js" crossorigin="anonymous"></script>
     <title>Friend Finder</title>
 </head>
 
 <body>
     <div class="container">
 
-        <div class="title">
-            <h1 class=""><i> </i> Friend Finder</h1>
+        <div class="jumbotron">
+            <h1 class=""><i class="fa fa-facebook-square" aria-hidden="true"> </i> Friend Finder</h1>
             <hr>
             <h2 class="">Answer a few basic questions. </h2>
             <h2 class="">Then find the friend with the greatest compatibility!</h2>
             <br>
 
             <div class="button">
-                <a href="#"><button type="button" class="btn">
-                        <h4><span class="glyphicon">
+                <a href="#"><button type="button" class="btn btn-lg btn-primary">
+                        <h4><span class="glyphicon glyphicon-list-alt">
                             </span>Go to Survey</h4>
                     </button></a>
             </div>
@@ -34,6 +39,17 @@
         </footer>
 
     </div>
+
+    <!--Bootstrap JS-->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+    </script>
 
 </body>
 
