--- a/app/public/home.html
+++ b/app/public/home.html
@@ -17,7 +17,7 @@
     <div class="container">
 
         <div class="jumbotron">
-            <h1 class=""><i class="fa fa-facebook-square" aria-hidden="true"> </i> Friend Finder</h1>
+            <h1 class=""><i class="fab fa-facebook-square" aria-hidden="true"> </i> Friend Finder</h1>
             <hr>
             <h2 class="">Answer a few basic questions. </h2>
             <h2 class="">Then find the friend with the greatest compatibility!</h2>
@@ -25,7 +25,7 @@
 
             <div class="button">
                 <a href="#"><button type="button" class="btn btn-lg btn-primary">
-                        <h4><span class="glyphicon glyphicon-list-alt">
+                        <h4><span class="fas fa-list-alt">
                             </span>Go to Survey</h4>
                     </button></a>
             </div>
