Button on home page is now functional and links to the survey page.

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -24,7 +24,7 @@
             <br>
 
             <div class="button">
-                <a href="#"><button type="button" class="btn btn-lg btn-primary">
+                <a href="/survey"><button type="button" class="btn btn-lg btn-primary">
                         <h4><span class="fas fa-list-alt">
                             </span>Go to Survey</h4>
                     </button></a>
