--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -36,7 +36,7 @@
 
             <h3><strong>Question 1</strong></h3>
             <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
-            <select data-placeholder="" class="form-control" id="q1">
+            <select data-placeholder="" class="form-control chosen-select" id="q1">
                 <option value=""></option>
                 <option value="1">1 (Strongly Disagree)</option>
                 <option value="2">2</option>
@@ -47,7 +47,7 @@
 
             <h3><strong>Question 2</strong></h3>
             <h4>Generally speaking, you rely more on your experience than your imagination.</h4>
-            <select data-placeholder="" class="form-control" id="q2">
+            <select data-placeholder="" class="form-control chosen-select" id="q2">
                 <option value=""></option>
                 <option value="1">1 (Strongly Disagree)</option>
                 <option value="2">2</option>
@@ -58,7 +58,7 @@
 
             <h3><strong>Question 3</strong></h3>
             <h4>You find it easy to stay relaxed and focused even when there is some pressure.</h4>
-            <select data-placeholder="" class="form-control" id="q3">
+            <select data-placeholder="" class="form-control chosen-select" id="q3">
                 <option value=""></option>
                 <option value="1">1 (Strongly Disagree)</option>
                 <option value="2">2</option>
@@ -69,7 +69,7 @@
 
             <h3><strong>Question 4</strong></h3>
             <h4>You rarely do something just out of sheer curiosity.</h4>
-            <select data-placeholder="" class="form-control" id="q4">
+            <select data-placeholder="" class="form-control chosen-select" id="q4">
                 <option value=""></option>
                 <option value="1">1 (Strongly Disagree)</option>
                 <option value="2">2</option>
@@ -80,7 +80,7 @@
 
             <h3><strong>Question 5</strong></h3>
             <h4>People can rarely upset you.</h4>
-            <select data-placeholder="" class="form-control" id="q5">
+            <select data-placeholder="" class="form-control chosen-select" id="q5">
                 <option value=""></option>
                 <option value="1">1 (Strongly Disagree)</option>
                 <option value="2">2</option>
@@ -91,7 +91,7 @@
 
             <h3><strong>Question 6</strong></h3>
             <h4>It is often difficult for you to relate to other people's feelings.</h4>
-            <select data-placeholder="" class="form-control" id="q6">
+            <select data-placeholder="" class="form-control chosen-select" id="q6">
                 <option value=""></option>
                 <option value="1">1 (Strongly Disagree)</option>
                 <option value="2">2</option>
@@ -102,7 +102,7 @@
 
             <h3><strong>Question 7</strong></h3>
             <h4>(Insert Question)</h4>
-            <select data-placeholder="" class="form-control" id="q7">
+            <select data-placeholder="" class="form-control chosen-select" id="q7">
                 <option value=""></option>
                 <option value="1">1 (Strongly Disagree)</option>
                 <option value="2">2</option>
@@ -113,7 +113,7 @@
 
             <h3><strong>Question 8</strong></h3>
             <h4>You rarely get carried away by fantasies and ideas.</h4>
-            <select data-placeholder="" class="form-control" id="q8">
+            <select data-placeholder="" class="form-control chosen-select" id="q8">
                 <option value=""></option>
                 <option value="1">1 (Strongly Disagree)</option>
                 <option value="2">2</option>
@@ -125,7 +125,7 @@
             <h3><strong>Question 9</strong></h3>
             <h4>You think that everyone's views should be respected regardless of whether they are supported by facts or
                 not.</h4>
-            <select data-placeholder="" class="form-control" id="q9">
+            <select data-placeholder="" class="form-control chosen-select" id="q9">
                 <option value=""></option>
                 <option value="1">1 (Strongly Disagree)</option>
                 <option value="2">2</option>
@@ -136,7 +136,7 @@
 
             <h3><strong>Question 10</strong></h3>
             <h4>You feel more energetic after spending time with a group of people.</h4>
-            <select data-placeholder="" class="form-control" id="q10">
+            <select data-placeholder="" class="form-control chosen-select" id="q10">
                 <option value=""></option>
                 <option value="1">1 (Strongly Disagree)</option>
                 <option value="2">2</option>
@@ -162,6 +162,27 @@
 
     </div>
 
+    <!--Modal-->
+    <div id="resultsModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+
+            <!--Modal Content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h2 class="modal-title"><strong>Best Match</strong></h2>
+                </div>
+                <div class="modal-body">
+                    <h2 id="matchName"></h2>
+                    <img id ="matchImg" src="#" alt="#">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!--Bootstrap JS-->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
@@ -171,6 +192,28 @@
     </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+    </script>
+    <script>
+        $("#submit").on("click", function(){
+
+            function validateForm(){
+                var isValid = true;
+                $(".form-control").each(function(){
+                    if($(this).val() === ""){
+                        isValid = false;
+                    }
+                });
+
+                $(".chosen-select").each(function(){
+
+                    if($(this).val() === ""){
+                        isValid = false;
+                    }
+                });
+
+                return isValid;
+            }
+        })
     </script>
 </body>
 
