--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -196,6 +196,7 @@
     <script>
         $("#submit").on("click", function(){
 
+            // Form validation
             function validateForm(){
                 var isValid = true;
                 $(".form-control").each(function(){
@@ -212,6 +213,34 @@
                 });
 
                 return isValid;
+            }
+
+            // If all fields are filled
+            if(validateForm()){
+                // Create an object for user's data
+                var userData = {
+
+                    name: $("#name").val(),
+                    photo: $("#photo").val(),
+                    scores: [
+                        $("#q1").val(),
+                        $("#q2").val(),
+                        $("#q3").val(),
+                        $("#q4").val(),
+                        $("#q5").val(),
+                        $("#q6").val(),
+                        $("#q7").val(),
+                        $("#q8").val(),
+                        $("#q9").val(),
+                        $("#q10").val(),
+                    ]
+                };
+
+                var currentURL = window.location.origin;
+
+                $.post(currentURL + "/api/friends", userData, function(data){
+                    alert(working);
+                });
             }
         })
     </script>
