--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -21,10 +21,8 @@
         <form>
 
             <div class="form-group">
-                <label for="email">Email address</label>
-                <input type="email" class="form-control" id="email" aria-describedby="emailHelp" required>
-                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
-                    else.</small>
+                <label for="name">Name</label>
+                <input type="name" class="form-control" id="name" aria-describedby="nameHelp" required>
             </div>
 
             <div class="form-group">
@@ -36,7 +34,7 @@
 
             <h3><strong>Question 1</strong></h3>
             <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
-            <select data-placeholder="" class="form-control chosen-select" id="q1">
+            <select data-placeholder="" class="form-control" id="q1">
                 <option value=""></option>
                 <option value="1">1 (Strongly Disagree)</option>
                 <option value="2">2</option>
@@ -47,7 +45,7 @@
 
             <h3><strong>Question 2</strong></h3>
             <h4>Generally speaking, you rely more on your experience than your imagination.</h4>
-            <select data-placeholder="" class="form-control chosen-select" id="q2">
+            <select data-placeholder="" class="form-control" id="q2">
                 <option value=""></option>
                 <option value="1">1 (Strongly Disagree)</option>
                 <option value="2">2</option>
@@ -58,7 +56,7 @@
 
             <h3><strong>Question 3</strong></h3>
             <h4>You find it easy to stay relaxed and focused even when there is some pressure.</h4>
-            <select data-placeholder="" class="form-control chosen-select" id="q3">
+            <select data-placeholder="" class="form-control" id="q3">
                 <option value=""></option>
                 <option value="1">1 (Strongly Disagree)</option>
                 <option value="2">2</option>
@@ -69,7 +67,7 @@
 
             <h3><strong>Question 4</strong></h3>
             <h4>You rarely do something just out of sheer curiosity.</h4>
-            <select data-placeholder="" class="form-control chosen-select" id="q4">
+            <select data-placeholder="" class="form-control" id="q4">
                 <option value=""></option>
                 <option value="1">1 (Strongly Disagree)</option>
                 <option value="2">2</option>
@@ -80,7 +78,7 @@
 
             <h3><strong>Question 5</strong></h3>
             <h4>People can rarely upset you.</h4>
-            <select data-placeholder="" class="form-control chosen-select" id="q5">
+            <select data-placeholder="" class="form-control" id="q5">
                 <option value=""></option>
                 <option value="1">1 (Strongly Disagree)</option>
                 <option value="2">2</option>
@@ -91,7 +89,7 @@
 
             <h3><strong>Question 6</strong></h3>
             <h4>It is often difficult for you to relate to other people's feelings.</h4>
-            <select data-placeholder="" class="form-control chosen-select" id="q6">
+            <select data-placeholder="" class="form-control" id="q6">
                 <option value=""></option>
                 <option value="1">1 (Strongly Disagree)</option>
                 <option value="2">2</option>
@@ -102,7 +100,7 @@
 
             <h3><strong>Question 7</strong></h3>
             <h4>(Insert Question)</h4>
-            <select data-placeholder="" class="form-control chosen-select" id="q7">
+            <select data-placeholder="" class="form-control" id="q7">
                 <option value=""></option>
                 <option value="1">1 (Strongly Disagree)</option>
                 <option value="2">2</option>
@@ -113,7 +111,7 @@
 
             <h3><strong>Question 8</strong></h3>
             <h4>You rarely get carried away by fantasies and ideas.</h4>
-            <select data-placeholder="" class="form-control chosen-select" id="q8">
+            <select data-placeholder="" class="form-control" id="q8">
                 <option value=""></option>
                 <option value="1">1 (Strongly Disagree)</option>
                 <option value="2">2</option>
@@ -125,7 +123,7 @@
             <h3><strong>Question 9</strong></h3>
             <h4>You think that everyone's views should be respected regardless of whether they are supported by facts or
                 not.</h4>
-            <select data-placeholder="" class="form-control chosen-select" id="q9">
+            <select data-placeholder="" class="form-control" id="q9">
                 <option value=""></option>
                 <option value="1">1 (Strongly Disagree)</option>
                 <option value="2">2</option>
@@ -136,7 +134,7 @@
 
             <h3><strong>Question 10</strong></h3>
             <h4>You feel more energetic after spending time with a group of people.</h4>
-            <select data-placeholder="" class="form-control chosen-select" id="q10">
+            <select data-placeholder="" class="form-control" id="q10">
                 <option value=""></option>
                 <option value="1">1 (Strongly Disagree)</option>
                 <option value="2">2</option>
@@ -150,6 +148,7 @@
 
             <button type="submit" class="btn btn-primary btn-lg btn-block" id="submit"><i class="fa fa-check-circle"
                     aria-hidden="true"></i>Submit</button>
+
         </form>
         <hr>
 
@@ -174,7 +173,7 @@
                 </div>
                 <div class="modal-body">
                     <h2 id="matchName"></h2>
-                    <img id ="matchImg" src="#" alt="#">
+                    <img id="matchImg" src="#" alt="#">
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -194,20 +193,14 @@
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
     </script>
     <script>
-        $("#submit").on("click", function(){
+        $("#submit").on("click", function () {
 
             // Form validation
-            function validateForm(){
+            function validateForm() {
                 var isValid = true;
-                $(".form-control").each(function(){
-                    if($(this).val() === ""){
-                        isValid = false;
-                    }
-                });
-
-                $(".chosen-select").each(function(){
-
-                    if($(this).val() === ""){
+                $(".form-control").each(function () {
+                    console.log("Check!")
+                    if ($(this).val() === "") {
                         isValid = false;
                     }
                 });
@@ -216,7 +209,7 @@
             }
 
             // If all fields are filled
-            if(validateForm()){
+            if (validateForm()) {
                 // Create an object for user's data
                 var userData = {
 
@@ -238,8 +231,8 @@
 
                 var currentURL = window.location.origin;
 
-                $.post(currentURL + "/api/friends", userData, function(data){
-                    alert(working);
+                $.post(currentURL + "/api/friends", userData, function (data) {
+                    alert("working!");
                 });
             }
         })
