--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -168,8 +168,9 @@
             <!--Modal Content-->
             <div class="modal-content">
                 <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h2 class="modal-title"><strong>Best Match</strong></h2>
+                    <h5 class="modal-title">Best Match</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
                 </div>
                 <div class="modal-body">
                     <h2 id="matchName"></h2>
@@ -208,8 +209,7 @@
 
             // If all fields are filled
             if (validateForm()) {
-                alert("I have been activated.")
-                alert("Top" + userData);
+
                 // Create an object for user's data
                 var userData = {
 
@@ -228,11 +228,15 @@
                         $("#q10").val(),
                     ]
                 };
-                alert(userData);
+
                 var currentURL = window.location.origin;
 
                 $.post(currentURL + "/api/friends", userData, function (data) {
-                    alert("working!");
+
+                    $("#matchName").text(data.name);
+                    $("#matchImg").attr("src", data.photo);
+
+                    $("#resultsModal").modal("toggle");
                 });
             }
 
