--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -8,6 +8,10 @@
     <!--Bootstrap CSS-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    <!--Chosen-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.css">
+
     <!--Font Awesome Icons-->
     <script src="https://kit.fontawesome.com/6117c38d24.js" crossorigin="anonymous"></script>
     <title>Friend Finder</title>
@@ -34,7 +38,7 @@
 
             <h3><strong>Question 1</strong></h3>
             <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
-            <select data-placeholder="" class="form-control" id="q1">
+            <select data-placeholder="" class="form-control chosen-select" id="q1">
                 <option value=""></option>
                 <option value="1">1 (Strongly Disagree)</option>
                 <option value="2">2</option>
@@ -45,7 +49,7 @@
 
             <h3><strong>Question 2</strong></h3>
             <h4>Generally speaking, you rely more on your experience than your imagination.</h4>
-            <select data-placeholder="" class="form-control" id="q2">
+            <select data-placeholder="" class="form-control chosen-select" id="q2">
                 <option value=""></option>
                 <option value="1">1 (Strongly Disagree)</option>
                 <option value="2">2</option>
@@ -56,7 +60,7 @@
 
             <h3><strong>Question 3</strong></h3>
             <h4>You find it easy to stay relaxed and focused even when there is some pressure.</h4>
-            <select data-placeholder="" class="form-control" id="q3">
+            <select data-placeholder="" class="form-control chosen-select" id="q3">
                 <option value=""></option>
                 <option value="1">1 (Strongly Disagree)</option>
                 <option value="2">2</option>
@@ -67,7 +71,7 @@
 
             <h3><strong>Question 4</strong></h3>
             <h4>You rarely do something just out of sheer curiosity.</h4>
-            <select data-placeholder="" class="form-control" id="q4">
+            <select data-placeholder="" class="form-control chosen-select" id="q4">
                 <option value=""></option>
                 <option value="1">1 (Strongly Disagree)</option>
                 <option value="2">2</option>
@@ -78,7 +82,7 @@
 
             <h3><strong>Question 5</strong></h3>
             <h4>People can rarely upset you.</h4>
-            <select data-placeholder="" class="form-control" id="q5">
+            <select data-placeholder="" class="form-control chosen-select" id="q5">
                 <option value=""></option>
                 <option value="1">1 (Strongly Disagree)</option>
                 <option value="2">2</option>
@@ -89,7 +93,7 @@
 
             <h3><strong>Question 6</strong></h3>
             <h4>It is often difficult for you to relate to other people's feelings.</h4>
-            <select data-placeholder="" class="form-control" id="q6">
+            <select data-placeholder="" class="form-control chosen-select" id="q6">
                 <option value=""></option>
                 <option value="1">1 (Strongly Disagree)</option>
                 <option value="2">2</option>
@@ -100,7 +104,7 @@
 
             <h3><strong>Question 7</strong></h3>
             <h4>(Insert Question)</h4>
-            <select data-placeholder="" class="form-control" id="q7">
+            <select data-placeholder="" class="form-control chosen-select" id="q7">
                 <option value=""></option>
                 <option value="1">1 (Strongly Disagree)</option>
                 <option value="2">2</option>
@@ -111,7 +115,7 @@
 
             <h3><strong>Question 8</strong></h3>
             <h4>You rarely get carried away by fantasies and ideas.</h4>
-            <select data-placeholder="" class="form-control" id="q8">
+            <select data-placeholder="" class="form-control chosen-select" id="q8">
                 <option value=""></option>
                 <option value="1">1 (Strongly Disagree)</option>
                 <option value="2">2</option>
@@ -123,7 +127,7 @@
             <h3><strong>Question 9</strong></h3>
             <h4>You think that everyone's views should be respected regardless of whether they are supported by facts or
                 not.</h4>
-            <select data-placeholder="" class="form-control" id="q9">
+            <select data-placeholder="" class="form-control chosen-select" id="q9">
                 <option value=""></option>
                 <option value="1">1 (Strongly Disagree)</option>
                 <option value="2">2</option>
@@ -134,7 +138,7 @@
 
             <h3><strong>Question 10</strong></h3>
             <h4>You feel more energetic after spending time with a group of people.</h4>
-            <select data-placeholder="" class="form-control" id="q10">
+            <select data-placeholder="" class="form-control chosen-select" id="q10">
                 <option value=""></option>
                 <option value="1">1 (Strongly Disagree)</option>
                 <option value="2">2</option>
@@ -186,6 +190,7 @@
     <!--Bootstrap JS-->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js">
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.8.7/chosen.jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
     </script>
@@ -193,12 +198,23 @@
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
     </script>
     <script>
+
+        // Chosen CSS
+        var config = {
+            ".chosen-select": {},
+            ".chosen-select-deselect": { allow_single_deselect: true },
+            ".chosen-select-no-single": { disable_search_threshold: 10 },
+            ".chosen-select-no-results": { no_results_text: "Oops, nothing found!" },
+            ".chosen-select-width": { width: "95%" }
+        };
+
+        // Captures the form inputs
         $("#submit").on("click", function () {
 
             // Form validation
             function validateForm() {
                 var isValid = true;
-                $(".form-control").each(function () {
+                $(".form-control chosen-select").each(function () {
 
                     if ($(this).val() === "") {
                         isValid = false;
