--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -158,7 +158,7 @@
 
         <footer class="footer">
             <div class="container">
-                <p><a href="#">API Friends List</a> | <a href="https://github.com/Nolimits1/friend-finder">GitHub
+                <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/Nolimits1/friend-finder">GitHub
                         Repo</a></p>
             </div>
         </footer>
